syntax = "proto3";
import "google/protobuf/any.proto";

message ServerMsg {
    oneof msg {
        ServerAppMsg appMsg = 1;
        ServerWelcomeMsg welcomeMsg = 100;
        ServerSessionAcceptMsg sessionAccept = 101;
        ServerSessionsMsg sessions = 102;
        Session session = 103;

    }
}

message ClientMsg {
    oneof msg {
        ClientAppMsg appMsg = 1;
        ClientConnectMsg connect = 100;
        ClientJoinSessionMsg joinSession = 101;
        ClientCreateSessionMsg createSession = 102;
        ClientRefreshSessionsMsg refreshSessions = 103;
    }
}
message Client {
    uint32 id = 1;
}
message ConnectedClientsMsg {
    repeated Client clients = 1;
}

/**Connect to the master server */
message ClientConnectMsg {

}

/**Refresh Master Server list*/
message ClientRefreshSessionsMsg {

}

/**Client connection established with the contained clientId*/
message ServerWelcomeMsg {
    uint32 clientId = 1;
}

/** Join the session with given id */
message ClientJoinSessionMsg {
    uint32 sessionId = 1;
}

/** Create a session with the given name and password */
message ClientCreateSessionMsg {
    string name = 1;
    string password = 2;
}

/**Session join or create has been accepted. */
message ServerSessionAcceptMsg {
    uint32 sesionId = 1;
    uint32 ownerId = 2;
    string name = 3;
}
message ClientAppMsg {
    uint32 to = 1;
    bytes data = 2;
    bool loopback = 3;
}

message ServerAppMsg {
    uint32 from = 1;
    bytes data = 2;
}

message Session {
    uint32 id = 1;
    uint32 owner = 2;
    string name = 3;
    bool passwordProtected = 4;
    repeated uint32 clients = 5;
}

message ServerSessionsMsg {
    repeated Session sessions = 2;
}